--- a/oncoFinder2/templates/database/drug_detail.html
+++ b/oncoFinder2/templates/database/drug_detail.html
@@ -15,8 +15,12 @@
 
 <table class="table table-bordered table-striped">
   <tr>
-    <td>Name:</td>
+    <td width="200px">Name:</td>
     <td>{{drug.name}}</td>
+  </tr>
+  <tr>
+    <td>DataBase:</td>
+    <td>{{drug.db}}</td>
   </tr>
   <tr>
     <td>Type:</td>
