--- a/oncoFinder2/templates/database/drug_list.html
+++ b/oncoFinder2/templates/database/drug_list.html
@@ -23,6 +23,7 @@
      <div class='well'>
        <h5><a href='/db/drugs/{{drug.name|slugify}}/{{drug.id}}/'>{{drug.name}}</a></h5>
        <ul class='small text-muted'>
+         <li>DataBase: <strong>{{drug.db}}</strong></li>
          <li>Type: <strong>{{drug.tip}}</strong></li>
          <li>Targets: <strong>{{drug.target_set.all|join:", "}}</strong></li>
        </ul> 
