--- a/oncoFinder2/templates/database/drug_list.html
+++ b/oncoFinder2/templates/database/drug_list.html
@@ -53,7 +53,7 @@
 <script>
 $(function(){
 	$("#drug_search").keyup(function(){ 
-		autocompleteAjaxSearch(this, $("#drug_list_container"), "drugs");
+		autocompleteAjaxSearch(this, $("#drug_list_container"), "/db/drugs");
 	});
 	
 });
