--- a/oncoFinder2/templates/mirna/document_detail.html
+++ b/oncoFinder2/templates/mirna/document_detail.html
@@ -63,7 +63,7 @@
 	
 	<div class="tab-content">
 	{% if miPAS %}
-	  <div class="tab-pane fade in active" id="#miPAS">
+	  <div class="tab-pane fade in active" id="miPAS">
 	      
 	      <div class="wrapper1">
 	        <div class="upper_scroll"></div>
