fix bug in input CNR file

--- a/oncoFinder2/templates/database/drug_detail.html
+++ b/oncoFinder2/templates/database/drug_detail.html
@@ -43,7 +43,7 @@
            <td> <small>Total: {{pathways|length}}</small>
                <ul>
                {% for path in pathways %}
-               <li><a href="/db/pathways/{{path.name}}/{{path.id}}/" target="_blanc">{{path.name}}</a></li>
+               <li><a href="/db/pathways/{{path.name|slugify}}/{{path.id}}/" target="_blanc">{{path.name}}</a></li>
                {%endfor%}
                </ul>
            </td>
