--- a/oncoFinder2/templates/mirna/mirna_calculation_parameters.html
+++ b/oncoFinder2/templates/mirna/mirna_calculation_parameters.html
@@ -33,6 +33,18 @@
           
           <div class="form-group form-group-sm">
           <div class="col-sm-10">
+          {{ form.organism_choice.label_tag }}
+          </div>
+          {% for org in form.organism_choice %}
+	      <label for="{{ org.id_for_label }}" class="checkbox-inline">
+	        {{ org.tag }}
+	        {{ org.choice_label }}
+	      </label>
+	     {% endfor %}
+	     </div>
+	     
+          <div class="form-group form-group-sm">
+          <div class="col-sm-10">
           {{ form.db_choice.label_tag }}
           </div>
           {% for db in form.db_choice %}
