--- a/oncoFinder2/templates/mirna/mirna_calculation_parameters.html
+++ b/oncoFinder2/templates/mirna/mirna_calculation_parameters.html
@@ -43,6 +43,14 @@
 	     {% endfor %}
 	     </div>
 	     
+	     <div class="form-group form-group-sm">
+          <div class="col-sm-10">
+          {{ form.path_db_choice.label_tag }}
+          
+          {{form.path_db_choice}}
+          </div>
+	     </div>
+	     
           <div class="form-group form-group-sm">
           <div class="col-sm-10">
           {{ form.db_choice.label_tag }}
