Fixed drug search

--- a/oncoFinder2/templates/database/drug_list.html
+++ b/oncoFinder2/templates/database/drug_list.html
@@ -53,9 +53,8 @@
 <script>
 $(function(){
 	$("#drug_search").keyup(function(){ 
-		autocompleteAjaxSearch(this, $("#drug_list_container"), "/db/drugs");
+		autocompleteAjaxSearch(this, null, null, $("#drug_list_container"), "/db/drugs");
 	});
-	
 });
 
 
