--- a/oncoFinder2/templates/database/drug_list.html
+++ b/oncoFinder2/templates/database/drug_list.html
@@ -6,7 +6,7 @@
 <div class="container">
     <h1><img src='/static/images/pharmacy.png' style="width: 100px;"/>Drugs DataBase </h1>
     <span class="text-muted">
-    Total ammount = <strong>{{allDrugs}}</strong> drugs
+    Total amount = <strong>{{allDrugs}}</strong> drugs
     </span>
      <div class="input-group col-lg-4 pull-right">
         <span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
